# feel

./: .biomeignore  .bunignore  .cursorrules  .dependency-cruiser.json  .dockerignore  .env.broker.example  .env.example  .gitattributes  .gitignore  .mcp.json  .plan  AGENTS.md  ATTACHMENT_PERSISTENCE_FIX.md  CHANGELOG.md  CHECKS_REFERENCE.md  CLAUDE.md  CLEANUP_SUMMARY.md  Caddyfile  Caddyfile.backup.20251108_194145  Caddyfile.widget  DOCUMENTATION.md  DOCUMENTATION_STRUCTURE.md  ENV_VAR_AUDIT_REPORT.md  HONEST_ASSESSMENT.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  LICENSE_EE.md  LINT_FIXES_SUMMARY.md  Makefile  OAUTH_IMPLEMENTATION_SPEC.md  OPEN_SOURCE_CLEANUP_REPORT.md  OPEN_SOURCE_READINESS_REPORT.md  ORACLE_QUESTION_E2E_TESTING.md  PHASE1_IMPLEMENTATION.md  README.md  REAL_TEST_SUMMARY.md  (+34 more)
.agents/: README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.husky/: README.md  post-checkout  post-merge  post-rewrite  pre-commit  pre-push
apps/deployer-rs/: Cargo.toml
apps/deployer-rs/src/: config.rs  constants.rs  db.rs  docker.rs  fingerprint.rs  github.rs  health.rs  lib.rs  logging.rs  main.rs  runtime_adapter.rs  source_contract.rs  systemd.rs  tests.rs  types.rs  worker.rs  workspace_contract.rs
apps/deployer-rs/src/worker/: build.rs  deployment.rs  error.rs
docs/: BUILD_ISOLATION_CHANGES.md  CLEANUP_GUIDE.md  DOCUMENTATION_UPDATE_2025-01-21.md  DOC_WRITING_GUIDE.md  FAILURE_MODES_PENTEST.md  GETTING_STARTED.md  IMPLEMENTATION_AUTO_PERMISSION_FIX.md  PREVENTING_TYPE_ERRORS.md  README.md  VISION.md  WORKSPACE_PERMISSION_ISSUES.md  advisory.md  dead-code-analysis.md  deployment.md  lovable.md  output5.md  tab-store-single-source-of-truth-plan.md  tool-perm-issue.md  widget-integration.md
ops/: README.md  (+4 more)
(+3367 files in other folders)
