[package]
name = "alive-deployer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
hostname = "0.4.1"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }
thiserror = "2.0.17"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
