[package]
name = "alive-deployer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.44", features = ["clock", "serde"] }
hostname = "0.4.2"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "json"] }
thiserror = "2.0.18"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }
